--- a/tests/simple_object/CMakeLists.txt
+++ b/tests/simple_object/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.12)
 
 add_executable(simple_object main.cpp Person.cpp)
-target_link_libraries(simple_object PersistentObject Persistence)
+target_link_libraries(simple_object Freezable Persistence)
