--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.12)
 
-add_library(Persistence Persistence.cpp)
+add_library(Freezer Freezer.cpp)
+add_library(Defroster Defroster.cpp)
 add_library(Freezable Freezable.cpp)
-target_link_libraries(Freezable Persistence)
+target_link_libraries(Freezable Freezer Defroster)
