Added public global freon header

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 3.12)
 
 add_library(Freezer Freezer.cpp)
 add_library(Defroster Defroster.cpp)
-add_library(Freezable Freezable.cpp)
-target_link_libraries(Freezable Freezer Defroster)
+add_library(freon Freezable.cpp)
+target_link_libraries(freon Freezer Defroster)
