--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,3 @@
 cmake_minimum_required(VERSION 3.12)
 
-add_library(Item Item.cpp)
-add_library(Freezer Freezer.cpp)
-add_library(Defroster Defroster.cpp)
-add_library(freon Freezable.cpp)
-target_link_libraries(freon Item Freezer Defroster)
+add_library(freon Freezable.cpp Freezer.cpp Defroster.cpp Item.cpp)
