Defroster refactored to melter

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,3 @@
 cmake_minimum_required(VERSION 3.12)
 
-add_library(freon liquid.cpp freezer.cpp Defroster.cpp Item.cpp)
+add_library(freon liquid.cpp freezer.cpp melter.cpp Item.cpp)
